# LuaMobileSdk

./: README.md
sources/Android/: build.gradle  settings.gradle
sources/Android/gradle/wrapper/: gradle-wrapper.properties
sources/Android/sdk/: build.gradle
sources/Android/sdk/src/main/: AndroidManifest.xml
sources/Android/sdk/src/main/cpp/: Application.mk  CMakeLists.txt
sources/Android/sdk/src/main/cpp/lua/: Android.mk  (+1 more)
sources/Android/sdk/src/main/cpp/luamobilesdk/: Android.mk  CMakeLists.txt
sources/Android/sdk/src/main/cpp/luamobilesdk/src/: BridgeDeclares.cc  BridgeDeclares.h  Log.cc  Log.h  LuaMetaTable.cc  LuaMetaTable.h  LuaState.cc  Utils.cc  Utils.h
sources/Android/test/: build.gradle
sources/Android/test/src/main/: AndroidManifest.xml
sources/iOS/LuaMobileSdk/LuaMobileSdk/: LuaMobileSdk.h
sources/iOS/LuaMobileSdk/LuaMobileSdk.xcodeproj/: project.pbxproj
sources/iOS/LuaMobileSdk/LuaMobileSdk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sources/iOS/LuaMobileSdk/LuaMobileSdk/Sources/Api/: SdkDeclares.h
sources/iOS/LuaMobileSdkTest/LuaMobileSdkTest.xcodeproj/: project.pbxproj
sources/iOS/LuaMobileSdkTest/LuaMobileSdkTestTests/base/: BaseTest.h  BaseTest.m  BaseWithLibraryTest.h  BaseWithLibraryTest.m
sources/iOS/LuaMobileSdkTest/LuaMobileSdkTestTests/tests/: ClassTest.m  FunctionTest.m  ModuleTest.m  NormalTest.m  PlainDataTest.m
sources/iOS/LuaMobileSdkWorkspace.xcworkspace/: contents.xcworkspacedata
sources/iOS/LuaMobileSdkWorkspace.xcworkspace/xcuserdata/arnozhang.xcuserdatad/: UserInterfaceState.xcuserstate
(+117 files in other folders)
